--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# 忽略 .vs 文件夹下的所有内容
+#.vs/
+
+# 忽略 .sln 文件
+#*.sln
+
+# 忽略 .vcxproj.user 文件
+#*.vcxproj.user
+
 # User-specific files
 *.rsuser
 *.suo
