--- a/CV1/CV1.vcxproj
+++ b/CV1/CV1.vcxproj
@@ -122,7 +122,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>mydll.lib;opencv_world470d.lib;%(AdditionalDependencies);halconcpp.lib;general.lib</AdditionalDependencies>
+      <AdditionalDependencies>mydll.lib;opencv_world480d.lib;%(AdditionalDependencies);halconcpp.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>D:\Libs\my\DLL\general\bin;D:\Apps\work\Halcon\HALCON-22.11-Steady\lib\x64-win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -142,7 +142,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>mydll.lib;opencv_world470.lib;%(AdditionalDependencies);halconcpp.lib;general.lib</AdditionalDependencies>
+      <AdditionalDependencies>mydll.lib;opencv_world480.lib;%(AdditionalDependencies);halconcpp.lib;general.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>D:\Libs\my\DLL\general\bin;D:\Apps\work\Halcon\HALCON-22.11-Steady\lib\x64-win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
