--- a/CV1/CV1.vcxproj
+++ b/CV1/CV1.vcxproj
@@ -147,8 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\HALCON2Cpp\fit ellipse.cpp" />
     <ClCompile Include="..\QtDeskTemplate\cvalgrm.cpp" />
+    <ClCompile Include="fit ellipse.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
