--- a/CV1/CV1.vcxproj
+++ b/CV1/CV1.vcxproj
@@ -150,6 +150,10 @@
     <ClCompile Include="..\QtDeskTemplate\cvalgrm.cpp" />
     <ClCompile Include="fit ellipse.cpp" />
     <ClCompile Include="CVmain.cpp" />
+    <ClCompile Include="imgalgm.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="imgalgm.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
