--- a/CV1/CV1.vcxproj.filters
+++ b/CV1/CV1.vcxproj.filters
@@ -28,5 +28,8 @@
     <ClInclude Include="imgalgm.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="imgproc_M.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
