--- a/CV1/CV1.vcxproj
+++ b/CV1/CV1.vcxproj
@@ -78,7 +78,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>D:\Programs\CPP\CV1\GeneralDLL;D:\Apps\work\Halcon\HALCON-22.11-Steady\include\halconc;D:\Apps\work\Halcon\HALCON-22.11-Steady\include;D:\Apps\work\Halcon\HALCON-22.11-Steady\include\halconcpp;D:\Libs\opencv\build\include\opencv2;D:\Libs\opencv\build\include;D:\libs\cv4.8\opencv\build\include\opencv2;D:\libs\cv4.8\opencv\build\include;D:\Libs\my\DLL\general\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\Libs\opencv4.8\opencv\build\x64\vc16\lib;D:\libs\my\dll\bin;D:\Libs\my\DLL\general\bin;D:\Apps\work\Halcon\HALCON-22.11-Steady\lib\x64-win64;D:\Libs\opencv\build\x64\vc16\lib;D:\libs\cv4.8\opencv\build\x64\vc16\lib;D:\libs\my\mydll\general\bin;$(LibraryPath)</LibraryPath>
+    <LibraryPath>D:\Programs\CPP\opencv4.8build\lib\Release;D:\Libs\opencv4.8\opencv\build\x64\vc16\lib;D:\libs\my\dll\bin;D:\Libs\my\DLL\general\bin;D:\Apps\work\Halcon\HALCON-22.11-Steady\lib\x64-win64;D:\Libs\opencv\build\x64\vc16\lib;D:\libs\cv4.8\opencv\build\x64\vc16\lib;D:\libs\my\mydll\general\bin;$(LibraryPath)</LibraryPath>
     <SourcePath>D:\Libs\my\DLL\general\source;D:\Programs\CPP\CV1\QtDeskTemplate;D:\libs\cv4.8\opencv\sources;$(SourcePath)</SourcePath>
     <ExternalIncludePath>D:\programs\github repositorys\xmu-zpf\cv-rmt\QtDeskTemplate;D:\Programs\CPP\CV1\QtDeskTemplate;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
@@ -142,7 +142,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>GeneralDLL.lib;opencv_world480.lib;%(AdditionalDependencies);halconcpp.lib</AdditionalDependencies>
+      <AdditionalDependencies>GeneralDLL.lib;opencv_world480.lib;%(AdditionalDependencies);halconcpp.lib;opencv_imgproc480.lib</AdditionalDependencies>
       <AdditionalLibraryDirectories>D:\libs\my\dll\bin;D:\Libs\my\DLL\general\bin;D:\Apps\work\Halcon\HALCON-22.11-Steady\lib\x64-win64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgalgm.h" />
+    <ClInclude Include="imgproc_M.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
